--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -132,12 +132,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="rel\include\common.h" />
+    <ClInclude Include="rel\include\common_types.h" />
     <ClInclude Include="rel\include\console.h" />
     <ClInclude Include="rel\include\evt_cmd.h" />
     <ClInclude Include="rel\include\gc\demo.h" />
     <ClInclude Include="rel\include\gc\exi.h" />
     <ClInclude Include="rel\include\gc\mtx.h" />
     <ClInclude Include="rel\include\gc\os.h" />
+    <ClInclude Include="rel\include\gc\OSCache.h" />
+    <ClInclude Include="rel\include\gc\OSLink.h" />
     <ClInclude Include="rel\include\gc\si.h" />
     <ClInclude Include="rel\include\gc\types.h" />
     <ClInclude Include="rel\include\item_data.h" />
@@ -146,6 +149,7 @@
     <ClInclude Include="rel\include\OWR.h" />
     <ClInclude Include="rel\include\OWR_STATE.h" />
     <ClInclude Include="rel\include\patch.h" />
+    <ClInclude Include="rel\include\patches_gor1.h" />
     <ClInclude Include="rel\include\timer.h" />
     <ClInclude Include="rel\include\ttyd\animdrv.h" />
     <ClInclude Include="rel\include\ttyd\common_types.h" />
@@ -155,11 +159,28 @@
     <ClInclude Include="rel\include\ttyd\envdrv.h" />
     <ClInclude Include="rel\include\ttyd\event.h" />
     <ClInclude Include="rel\include\ttyd\evtmgr.h" />
+    <ClInclude Include="rel\include\ttyd\evtmgr_cmd.h" />
+    <ClInclude Include="rel\include\ttyd\evt_badgeshop.h" />
     <ClInclude Include="rel\include\ttyd\evt_bero.h" />
+    <ClInclude Include="rel\include\ttyd\evt_cam.h" />
+    <ClInclude Include="rel\include\ttyd\evt_eff.h" />
+    <ClInclude Include="rel\include\ttyd\evt_fade.h" />
+    <ClInclude Include="rel\include\ttyd\evt_item.h" />
+    <ClInclude Include="rel\include\ttyd\evt_johoya.h" />
     <ClInclude Include="rel\include\ttyd\evt_map.h" />
+    <ClInclude Include="rel\include\ttyd\evt_mario.h" />
+    <ClInclude Include="rel\include\ttyd\evt_memcard.h" />
     <ClInclude Include="rel\include\ttyd\evt_mobj.h" />
+    <ClInclude Include="rel\include\ttyd\evt_msg.h" />
     <ClInclude Include="rel\include\ttyd\evt_npc.h" />
+    <ClInclude Include="rel\include\ttyd\evt_party.h" />
+    <ClInclude Include="rel\include\ttyd\evt_pouch.h" />
     <ClInclude Include="rel\include\ttyd\evt_shop.h" />
+    <ClInclude Include="rel\include\ttyd\evt_snd.h" />
+    <ClInclude Include="rel\include\ttyd\evt_sub.h" />
+    <ClInclude Include="rel\include\ttyd\evt_win.h" />
+    <ClInclude Include="rel\include\ttyd\evt_window.h" />
+    <ClInclude Include="rel\include\ttyd\evt_yuugijou.h" />
     <ClInclude Include="rel\include\ttyd\fontmgr.h" />
     <ClInclude Include="rel\include\ttyd\hitdrv.h" />
     <ClInclude Include="rel\include\ttyd\itemdrv.h" />
@@ -193,6 +214,7 @@
     <ClCompile Include="rel\source\mod.cpp" />
     <ClCompile Include="rel\source\OWR.cpp" />
     <ClCompile Include="rel\source\patch.cpp" />
+    <ClCompile Include="rel\source\patches_gor1.cpp" />
     <ClCompile Include="rel\source\rel.cpp" />
     <ClCompile Include="rel\source\ug.cpp" />
     <ClCompile Include="rel\source\util.cpp" />
