--- a/TTYDAP.vcxproj.filters
+++ b/TTYDAP.vcxproj.filters
@@ -165,6 +165,69 @@
     <ClInclude Include="rel\include\util.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="rel\include\patches_gor1.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\gc\OSLink.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\ttyd\evt_item.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\common_types.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\ttyd\evt_badgeshop.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\ttyd\evt_cam.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\ttyd\evt_eff.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\ttyd\evt_fade.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\ttyd\evt_johoya.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\ttyd\evt_mario.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\ttyd\evt_memcard.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\ttyd\evt_msg.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\ttyd\evt_party.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\ttyd\evt_pouch.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\ttyd\evt_snd.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\ttyd\evt_sub.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\ttyd\evt_win.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\ttyd\evt_window.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\ttyd\evt_yuugijou.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\ttyd\evtmgr_cmd.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\gc\OSCache.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rel\source\common.cpp">
@@ -204,6 +267,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="rel\source\util.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="rel\source\patches_gor1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
