--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -132,6 +132,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="rel\include\AP\common.h" />
     <ClInclude Include="rel\include\common.h" />
     <ClInclude Include="rel\include\common_types.h" />
     <ClInclude Include="rel\include\console.h" />
@@ -205,6 +206,7 @@
     <ClInclude Include="rel\include\util.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="rel\source\AP\common.cpp" />
     <ClCompile Include="rel\source\common.cpp" />
     <ClCompile Include="rel\source\console.cpp" />
     <ClCompile Include="rel\source\con_mario.cpp" />
