--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -222,6 +222,11 @@
     <ClCompile Include="rel\source\ug.cpp" />
     <ClCompile Include="rel\source\util.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="rel\include\ttyd.eu.lst" />
+    <None Include="rel\include\ttyd.jp.lst" />
+    <None Include="rel\include\ttyd.us.lst" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
