--- a/TTYDAP.vcxproj.filters
+++ b/TTYDAP.vcxproj.filters
@@ -168,9 +168,6 @@
     <ClInclude Include="rel\include\patches_gor1.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="rel\include\gc\OSLink.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="rel\include\ttyd\evt_item.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -231,6 +228,9 @@
     <ClInclude Include="rel\include\AP\common.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="rel\include\gc\OSLink.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rel\source\common.cpp">
@@ -278,5 +278,10 @@
     <ClCompile Include="rel\source\AP\common.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="rel\include\ttyd.us.lst" />
+    <None Include="rel\include\ttyd.jp.lst" />
+    <None Include="rel\include\ttyd.eu.lst" />
   </ItemGroup>
 </Project>
