finish gor_01, start gor_02

--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -132,7 +132,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="rel\include\gor.h" />
+    <ClInclude Include="rel\include\AP\gor_00.h" />
+    <ClInclude Include="rel\include\AP\gor_01.h" />
+    <ClInclude Include="rel\include\AP\gor_02.h" />
     <ClInclude Include="rel\include\common.h" />
     <ClInclude Include="rel\include\common_types.h" />
     <ClInclude Include="rel\include\console.h" />
@@ -151,7 +153,6 @@
     <ClInclude Include="rel\include\OWR.h" />
     <ClInclude Include="rel\include\OWR_STATE.h" />
     <ClInclude Include="rel\include\patch.h" />
-    <ClInclude Include="rel\include\patches_gor1.h" />
     <ClInclude Include="rel\include\timer.h" />
     <ClInclude Include="rel\include\ttyd\animdrv.h" />
     <ClInclude Include="rel\include\ttyd\common_types.h" />
@@ -167,6 +168,7 @@
     <ClInclude Include="rel\include\ttyd\evt_cam.h" />
     <ClInclude Include="rel\include\ttyd\evt_eff.h" />
     <ClInclude Include="rel\include\ttyd\evt_fade.h" />
+    <ClInclude Include="rel\include\ttyd\evt_hit.h" />
     <ClInclude Include="rel\include\ttyd\evt_item.h" />
     <ClInclude Include="rel\include\ttyd\evt_johoya.h" />
     <ClInclude Include="rel\include\ttyd\evt_map.h" />
@@ -174,6 +176,7 @@
     <ClInclude Include="rel\include\ttyd\evt_memcard.h" />
     <ClInclude Include="rel\include\ttyd\evt_mobj.h" />
     <ClInclude Include="rel\include\ttyd\evt_msg.h" />
+    <ClInclude Include="rel\include\ttyd\evt_nannpc.h" />
     <ClInclude Include="rel\include\ttyd\evt_npc.h" />
     <ClInclude Include="rel\include\ttyd\evt_party.h" />
     <ClInclude Include="rel\include\ttyd\evt_pouch.h" />
@@ -207,7 +210,9 @@
     <ClInclude Include="rel\include\util.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="rel\source\gor.cpp" />
+    <ClCompile Include="rel\source\AP\gor_00.cpp" />
+    <ClCompile Include="rel\source\AP\gor_01.cpp" />
+    <ClCompile Include="rel\source\AP\gor_02.cpp" />
     <ClCompile Include="rel\source\common.cpp" />
     <ClCompile Include="rel\source\console.cpp" />
     <ClCompile Include="rel\source\con_mario.cpp" />
@@ -218,7 +223,6 @@
     <ClCompile Include="rel\source\mod.cpp" />
     <ClCompile Include="rel\source\OWR.cpp" />
     <ClCompile Include="rel\source\patch.cpp" />
-    <ClCompile Include="rel\source\patches_gor1.cpp" />
     <ClCompile Include="rel\source\rel.cpp" />
     <ClCompile Include="rel\source\ug.cpp" />
     <ClCompile Include="rel\source\util.cpp" />
