--- a/TTYDAP.vcxproj.filters
+++ b/TTYDAP.vcxproj.filters
@@ -165,9 +165,6 @@
     <ClInclude Include="rel\include\util.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="rel\include\patches_gor1.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="rel\include\ttyd\evt_item.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -228,10 +225,22 @@
     <ClInclude Include="rel\include\gc\OSLink.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="rel\include\gor.h">
+    <ClInclude Include="rel\include\AP\gor_00.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="rel\include\ttyd\evt_urouro.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\ttyd\evt_nannpc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\ttyd\evt_hit.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\AP\gor_01.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\AP\gor_02.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -275,10 +284,13 @@
     <ClCompile Include="rel\source\util.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="rel\source\patches_gor1.cpp">
+    <ClCompile Include="rel\source\AP\gor_00.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="rel\source\gor.cpp">
+    <ClCompile Include="rel\source\AP\gor_01.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="rel\source\AP\gor_02.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
