--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -135,6 +135,7 @@
     <ClInclude Include="rel\include\AP\gor_00.h" />
     <ClInclude Include="rel\include\AP\gor_01.h" />
     <ClInclude Include="rel\include\AP\gor_02.h" />
+    <ClInclude Include="rel\include\AP\gor_03.h" />
     <ClInclude Include="rel\include\common.h" />
     <ClInclude Include="rel\include\common_types.h" />
     <ClInclude Include="rel\include\console.h" />
@@ -213,6 +214,7 @@
     <ClCompile Include="rel\source\AP\gor_00.cpp" />
     <ClCompile Include="rel\source\AP\gor_01.cpp" />
     <ClCompile Include="rel\source\AP\gor_02.cpp" />
+    <ClCompile Include="rel\source\AP\gor_03.cpp" />
     <ClCompile Include="rel\source\common.cpp" />
     <ClCompile Include="rel\source\console.cpp" />
     <ClCompile Include="rel\source\con_mario.cpp" />
