--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -136,6 +136,8 @@
     <ClInclude Include="rel\include\AP\gor_01.h" />
     <ClInclude Include="rel\include\AP\gor_02.h" />
     <ClInclude Include="rel\include\AP\gor_03.h" />
+    <ClInclude Include="rel\include\AP\gor_04.h" />
+    <ClInclude Include="rel\include\AP\gor_misc.h" />
     <ClInclude Include="rel\include\common.h" />
     <ClInclude Include="rel\include\common_types.h" />
     <ClInclude Include="rel\include\console.h" />
@@ -215,6 +217,8 @@
     <ClCompile Include="rel\source\AP\gor_01.cpp" />
     <ClCompile Include="rel\source\AP\gor_02.cpp" />
     <ClCompile Include="rel\source\AP\gor_03.cpp" />
+    <ClCompile Include="rel\source\AP\gor_04.cpp" />
+    <ClCompile Include="rel\source\AP\gor_misc.cpp" />
     <ClCompile Include="rel\source\common.cpp" />
     <ClCompile Include="rel\source\console.cpp" />
     <ClCompile Include="rel\source\con_mario.cpp" />
