--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="rel\include\AP\gor_03.h" />
     <ClInclude Include="rel\include\AP\gor_04.h" />
     <ClInclude Include="rel\include\AP\gor_misc.h" />
+    <ClInclude Include="rel\include\AP\hei.h" />
     <ClInclude Include="rel\include\common.h" />
     <ClInclude Include="rel\include\common_types.h" />
     <ClInclude Include="rel\include\console.h" />
@@ -219,6 +220,7 @@
     <ClCompile Include="rel\source\AP\gor_03.cpp" />
     <ClCompile Include="rel\source\AP\gor_04.cpp" />
     <ClCompile Include="rel\source\AP\gor_misc.cpp" />
+    <ClCompile Include="rel\source\AP\hei.cpp" />
     <ClCompile Include="rel\source\common.cpp" />
     <ClCompile Include="rel\source\console.cpp" />
     <ClCompile Include="rel\source\con_mario.cpp" />
