--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -132,6 +132,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="rel\include\AP\gon.h" />
     <ClInclude Include="rel\include\AP\gor_00.h" />
     <ClInclude Include="rel\include\AP\gor_01.h" />
     <ClInclude Include="rel\include\AP\gor_02.h" />
@@ -139,6 +140,7 @@
     <ClInclude Include="rel\include\AP\gor_04.h" />
     <ClInclude Include="rel\include\AP\gor_misc.h" />
     <ClInclude Include="rel\include\AP\hei.h" />
+    <ClInclude Include="rel\include\AP\nok.h" />
     <ClInclude Include="rel\include\common.h" />
     <ClInclude Include="rel\include\common_types.h" />
     <ClInclude Include="rel\include\console.h" />
@@ -214,6 +216,7 @@
     <ClInclude Include="rel\include\util.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="rel\source\AP\gon.cpp" />
     <ClCompile Include="rel\source\AP\gor_00.cpp" />
     <ClCompile Include="rel\source\AP\gor_01.cpp" />
     <ClCompile Include="rel\source\AP\gor_02.cpp" />
@@ -221,6 +224,7 @@
     <ClCompile Include="rel\source\AP\gor_04.cpp" />
     <ClCompile Include="rel\source\AP\gor_misc.cpp" />
     <ClCompile Include="rel\source\AP\hei.cpp" />
+    <ClCompile Include="rel\source\AP\nok.cpp" />
     <ClCompile Include="rel\source\common.cpp" />
     <ClCompile Include="rel\source\console.cpp" />
     <ClCompile Include="rel\source\con_mario.cpp" />
