Finish ch.1, start boggly woods

--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -141,6 +141,7 @@
     <ClInclude Include="rel\include\AP\gor_misc.h" />
     <ClInclude Include="rel\include\AP\hei.h" />
     <ClInclude Include="rel\include\AP\nok.h" />
+    <ClInclude Include="rel\include\AP\win.h" />
     <ClInclude Include="rel\include\common.h" />
     <ClInclude Include="rel\include\common_types.h" />
     <ClInclude Include="rel\include\console.h" />
@@ -225,6 +226,7 @@
     <ClCompile Include="rel\source\AP\gor_misc.cpp" />
     <ClCompile Include="rel\source\AP\hei.cpp" />
     <ClCompile Include="rel\source\AP\nok.cpp" />
+    <ClCompile Include="rel\source\AP\win.cpp" />
     <ClCompile Include="rel\source\common.cpp" />
     <ClCompile Include="rel\source\console.cpp" />
     <ClCompile Include="rel\source\con_mario.cpp" />
