--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -140,6 +140,7 @@
     <ClInclude Include="rel\include\AP\gor_04.h" />
     <ClInclude Include="rel\include\AP\gor_misc.h" />
     <ClInclude Include="rel\include\AP\hei.h" />
+    <ClInclude Include="rel\include\AP\mri.h" />
     <ClInclude Include="rel\include\AP\nok.h" />
     <ClInclude Include="rel\include\AP\win.h" />
     <ClInclude Include="rel\include\common.h" />
@@ -225,6 +226,7 @@
     <ClCompile Include="rel\source\AP\gor_04.cpp" />
     <ClCompile Include="rel\source\AP\gor_misc.cpp" />
     <ClCompile Include="rel\source\AP\hei.cpp" />
+    <ClCompile Include="rel\source\AP\mri.cpp" />
     <ClCompile Include="rel\source\AP\nok.cpp" />
     <ClCompile Include="rel\source\AP\win.cpp" />
     <ClCompile Include="rel\source\common.cpp" />
