--- a/TTYDAP.vcxproj.filters
+++ b/TTYDAP.vcxproj.filters
@@ -264,6 +264,9 @@
     <ClInclude Include="rel\include\AP\win.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="rel\include\AP\mri.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rel\source\common.cpp">
@@ -333,6 +336,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="rel\source\AP\win.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="rel\source\AP\mri.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
