Finish Great Tree. Start Glitzville

--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -142,6 +142,8 @@
     <ClInclude Include="rel\include\AP\hei.h" />
     <ClInclude Include="rel\include\AP\mri.h" />
     <ClInclude Include="rel\include\AP\nok.h" />
+    <ClInclude Include="rel\include\AP\tou.h" />
+    <ClInclude Include="rel\include\AP\tou2.h" />
     <ClInclude Include="rel\include\AP\win.h" />
     <ClInclude Include="rel\include\common.h" />
     <ClInclude Include="rel\include\common_types.h" />
@@ -228,6 +230,8 @@
     <ClCompile Include="rel\source\AP\hei.cpp" />
     <ClCompile Include="rel\source\AP\mri.cpp" />
     <ClCompile Include="rel\source\AP\nok.cpp" />
+    <ClCompile Include="rel\source\AP\tou.cpp" />
+    <ClCompile Include="rel\source\AP\tou2.cpp" />
     <ClCompile Include="rel\source\AP\win.cpp" />
     <ClCompile Include="rel\source\common.cpp" />
     <ClCompile Include="rel\source\console.cpp" />
