--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -144,6 +144,7 @@
     <ClInclude Include="rel\include\AP\nok.h" />
     <ClInclude Include="rel\include\AP\tou.h" />
     <ClInclude Include="rel\include\AP\tou2.h" />
+    <ClInclude Include="rel\include\AP\usu.h" />
     <ClInclude Include="rel\include\AP\win.h" />
     <ClInclude Include="rel\include\common.h" />
     <ClInclude Include="rel\include\common_types.h" />
@@ -232,6 +233,7 @@
     <ClCompile Include="rel\source\AP\nok.cpp" />
     <ClCompile Include="rel\source\AP\tou.cpp" />
     <ClCompile Include="rel\source\AP\tou2.cpp" />
+    <ClCompile Include="rel\source\AP\usu.cpp" />
     <ClCompile Include="rel\source\AP\win.cpp" />
     <ClCompile Include="rel\source\common.cpp" />
     <ClCompile Include="rel\source\console.cpp" />
