--- a/TTYDAP.vcxproj.filters
+++ b/TTYDAP.vcxproj.filters
@@ -273,6 +273,15 @@
     <ClInclude Include="rel\include\AP\tou2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="rel\include\AP\usu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\AP\gra.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rel\include\AP\jin.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rel\source\common.cpp">
@@ -351,6 +360,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="rel\source\AP\tou2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="rel\source\AP\usu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="rel\source\AP\gra.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="rel\source\AP\jin.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
