--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -139,7 +139,9 @@
     <ClInclude Include="rel\include\AP\gor_03.h" />
     <ClInclude Include="rel\include\AP\gor_04.h" />
     <ClInclude Include="rel\include\AP\gor_misc.h" />
+    <ClInclude Include="rel\include\AP\gra.h" />
     <ClInclude Include="rel\include\AP\hei.h" />
+    <ClInclude Include="rel\include\AP\jin.h" />
     <ClInclude Include="rel\include\AP\mri.h" />
     <ClInclude Include="rel\include\AP\nok.h" />
     <ClInclude Include="rel\include\AP\tou.h" />
@@ -228,9 +230,11 @@
     <ClCompile Include="rel\source\AP\gor_03.cpp" />
     <ClCompile Include="rel\source\AP\gor_04.cpp" />
     <ClCompile Include="rel\source\AP\gor_misc.cpp" />
+    <ClCompile Include="rel\source\AP\gra.cpp" />
     <ClCompile Include="rel\source\AP\hei.cpp" />
     <ClCompile Include="rel\source\AP\mri.cpp" />
     <ClCompile Include="rel\source\AP\nok.cpp" />
+    <ClCompile Include="rel\source\AP\jin.cpp" />
     <ClCompile Include="rel\source\AP\tou.cpp" />
     <ClCompile Include="rel\source\AP\tou2.cpp" />
     <ClCompile Include="rel\source\AP\usu.cpp" />
