--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -104,8 +104,8 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\jbourque\Desktop\Programming\TTYDAP\rel\include;H:\GhidraProjects\TTYDAP\TTYDAP\rel\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <AdditionalUsingDirectories>H:\GhidraProjects\TTYDAP\TTYDAP\rel\include;%(AdditionalUsingDirectories)</AdditionalUsingDirectories>
+      <AdditionalIncludeDirectories>C:\Programming\TTYDAP\rel\include;C:\Users\jbourque\Desktop\Programming\TTYDAP\rel\include;H:\GhidraProjects\TTYDAP\TTYDAP\rel\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalUsingDirectories>C:\Programming\TTYDAP\rel\include;H:\GhidraProjects\TTYDAP\TTYDAP\rel\include;%(AdditionalUsingDirectories)</AdditionalUsingDirectories>
       <TranslateIncludes>false</TranslateIncludes>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
