Finish Ch.4 + Start Ch.5

--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="rel\include\AP\hei.h" />
     <ClInclude Include="rel\include\AP\jin.h" />
     <ClInclude Include="rel\include\AP\mri.h" />
+    <ClInclude Include="rel\include\AP\muj.h" />
     <ClInclude Include="rel\include\AP\nok.h" />
     <ClInclude Include="rel\include\AP\tou.h" />
     <ClInclude Include="rel\include\AP\tou2.h" />
@@ -233,6 +234,7 @@
     <ClCompile Include="rel\source\AP\gra.cpp" />
     <ClCompile Include="rel\source\AP\hei.cpp" />
     <ClCompile Include="rel\source\AP\mri.cpp" />
+    <ClCompile Include="rel\source\AP\muj.cpp" />
     <ClCompile Include="rel\source\AP\nok.cpp" />
     <ClCompile Include="rel\source\AP\jin.cpp" />
     <ClCompile Include="rel\source\AP\tou.cpp" />
@@ -257,6 +259,9 @@
     <None Include="rel\include\ttyd.eu.lst" />
     <None Include="rel\include\ttyd.jp.lst" />
     <None Include="rel\include\ttyd.us.lst" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="rel\GSW values\Ch5.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
