--- a/TTYDAP.vcxproj.filters
+++ b/TTYDAP.vcxproj.filters
@@ -282,6 +282,9 @@
     <ClInclude Include="rel\include\AP\jin.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="rel\include\AP\muj.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rel\source\common.cpp">
@@ -371,10 +374,16 @@
     <ClCompile Include="rel\source\AP\jin.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="rel\source\AP\muj.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="rel\include\ttyd.us.lst" />
     <None Include="rel\include\ttyd.jp.lst" />
     <None Include="rel\include\ttyd.eu.lst" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="rel\GSW values\Ch5.txt" />
   </ItemGroup>
 </Project>
