Finish Keelhaul Key

--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -132,6 +132,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="rel\include\AP\dou.h" />
     <ClInclude Include="rel\include\AP\gon.h" />
     <ClInclude Include="rel\include\AP\gor_00.h" />
     <ClInclude Include="rel\include\AP\gor_01.h" />
@@ -224,6 +225,7 @@
     <ClInclude Include="rel\include\util.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="rel\source\AP\dou.cpp" />
     <ClCompile Include="rel\source\AP\gon.cpp" />
     <ClCompile Include="rel\source\AP\gor_00.cpp" />
     <ClCompile Include="rel\source\AP\gor_01.cpp" />
