--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="rel\include\AP\mri.h" />
     <ClInclude Include="rel\include\AP\muj.h" />
     <ClInclude Include="rel\include\AP\nok.h" />
+    <ClInclude Include="rel\include\AP\rsh.h" />
     <ClInclude Include="rel\include\AP\tou.h" />
     <ClInclude Include="rel\include\AP\tou2.h" />
     <ClInclude Include="rel\include\AP\usu.h" />
@@ -239,6 +240,7 @@
     <ClCompile Include="rel\source\AP\muj.cpp" />
     <ClCompile Include="rel\source\AP\nok.cpp" />
     <ClCompile Include="rel\source\AP\jin.cpp" />
+    <ClCompile Include="rel\source\AP\rsh.cpp" />
     <ClCompile Include="rel\source\AP\tou.cpp" />
     <ClCompile Include="rel\source\AP\tou2.cpp" />
     <ClCompile Include="rel\source\AP\usu.cpp" />
@@ -264,6 +266,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="rel\GSW values\Ch5.txt" />
+    <Text Include="rel\GSW values\Ch6.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
