Finish base mod

--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -132,7 +132,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="rel\include\AP\aji.h" />
+    <ClInclude Include="rel\include\AP\bom.h" />
     <ClInclude Include="rel\include\AP\dou.h" />
+    <ClInclude Include="rel\include\AP\eki.h" />
+    <ClInclude Include="rel\include\AP\end.h" />
     <ClInclude Include="rel\include\AP\gon.h" />
     <ClInclude Include="rel\include\AP\gor_00.h" />
     <ClInclude Include="rel\include\AP\gor_01.h" />
@@ -142,10 +146,13 @@
     <ClInclude Include="rel\include\AP\gor_misc.h" />
     <ClInclude Include="rel\include\AP\gra.h" />
     <ClInclude Include="rel\include\AP\hei.h" />
+    <ClInclude Include="rel\include\AP\hom.h" />
     <ClInclude Include="rel\include\AP\jin.h" />
+    <ClInclude Include="rel\include\AP\moo.h" />
     <ClInclude Include="rel\include\AP\mri.h" />
     <ClInclude Include="rel\include\AP\muj.h" />
     <ClInclude Include="rel\include\AP\nok.h" />
+    <ClInclude Include="rel\include\AP\pik.h" />
     <ClInclude Include="rel\include\AP\rsh.h" />
     <ClInclude Include="rel\include\AP\tou.h" />
     <ClInclude Include="rel\include\AP\tou2.h" />
@@ -179,9 +186,11 @@
     <ClInclude Include="rel\include\ttyd\event.h" />
     <ClInclude Include="rel\include\ttyd\evtmgr.h" />
     <ClInclude Include="rel\include\ttyd\evtmgr_cmd.h" />
+    <ClInclude Include="rel\include\ttyd\evt_aji.h" />
     <ClInclude Include="rel\include\ttyd\evt_badgeshop.h" />
     <ClInclude Include="rel\include\ttyd\evt_bero.h" />
     <ClInclude Include="rel\include\ttyd\evt_cam.h" />
+    <ClInclude Include="rel\include\ttyd\evt_case.h" />
     <ClInclude Include="rel\include\ttyd\evt_eff.h" />
     <ClInclude Include="rel\include\ttyd\evt_fade.h" />
     <ClInclude Include="rel\include\ttyd\evt_hit.h" />
@@ -196,6 +205,7 @@
     <ClInclude Include="rel\include\ttyd\evt_npc.h" />
     <ClInclude Include="rel\include\ttyd\evt_party.h" />
     <ClInclude Include="rel\include\ttyd\evt_pouch.h" />
+    <ClInclude Include="rel\include\ttyd\evt_seq.h" />
     <ClInclude Include="rel\include\ttyd\evt_shop.h" />
     <ClInclude Include="rel\include\ttyd\evt_snd.h" />
     <ClInclude Include="rel\include\ttyd\evt_sub.h" />
@@ -212,6 +222,7 @@
     <ClInclude Include="rel\include\ttyd\mariost.h" />
     <ClInclude Include="rel\include\ttyd\mario_motion.h" />
     <ClInclude Include="rel\include\ttyd\mario_party.h" />
+    <ClInclude Include="rel\include\ttyd\mario_pouch.h" />
     <ClInclude Include="rel\include\ttyd\memory.h" />
     <ClInclude Include="rel\include\ttyd\npcdrv.h" />
     <ClInclude Include="rel\include\ttyd\OSCache.h" />
@@ -226,7 +237,11 @@
     <ClInclude Include="rel\include\util.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="rel\source\AP\aji.cpp" />
+    <ClCompile Include="rel\source\AP\bom.cpp" />
     <ClCompile Include="rel\source\AP\dou.cpp" />
+    <ClCompile Include="rel\source\AP\eki.cpp" />
+    <ClCompile Include="rel\source\AP\end.cpp" />
     <ClCompile Include="rel\source\AP\gon.cpp" />
     <ClCompile Include="rel\source\AP\gor_00.cpp" />
     <ClCompile Include="rel\source\AP\gor_01.cpp" />
@@ -236,10 +251,13 @@
     <ClCompile Include="rel\source\AP\gor_misc.cpp" />
     <ClCompile Include="rel\source\AP\gra.cpp" />
     <ClCompile Include="rel\source\AP\hei.cpp" />
+    <ClCompile Include="rel\source\AP\hom.cpp" />
+    <ClCompile Include="rel\source\AP\moo.cpp" />
     <ClCompile Include="rel\source\AP\mri.cpp" />
     <ClCompile Include="rel\source\AP\muj.cpp" />
     <ClCompile Include="rel\source\AP\nok.cpp" />
     <ClCompile Include="rel\source\AP\jin.cpp" />
+    <ClCompile Include="rel\source\AP\pik.cpp" />
     <ClCompile Include="rel\source\AP\rsh.cpp" />
     <ClCompile Include="rel\source\AP\tou.cpp" />
     <ClCompile Include="rel\source\AP\tou2.cpp" />
@@ -260,6 +278,7 @@
     <ClCompile Include="rel\source\util.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="cpp.hint" />
     <None Include="rel\include\ttyd.eu.lst" />
     <None Include="rel\include\ttyd.jp.lst" />
     <None Include="rel\include\ttyd.us.lst" />
