--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -132,6 +132,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="rel\include\AP\aaa.h" />
     <ClInclude Include="rel\include\AP\aji.h" />
     <ClInclude Include="rel\include\AP\bom.h" />
     <ClInclude Include="rel\include\AP\dou.h" />
@@ -148,12 +149,15 @@
     <ClInclude Include="rel\include\AP\hei.h" />
     <ClInclude Include="rel\include\AP\hom.h" />
     <ClInclude Include="rel\include\AP\jin.h" />
+    <ClInclude Include="rel\include\AP\kpa.h" />
+    <ClInclude Include="rel\include\AP\las.h" />
     <ClInclude Include="rel\include\AP\moo.h" />
     <ClInclude Include="rel\include\AP\mri.h" />
     <ClInclude Include="rel\include\AP\muj.h" />
     <ClInclude Include="rel\include\AP\nok.h" />
     <ClInclude Include="rel\include\AP\pik.h" />
     <ClInclude Include="rel\include\AP\rsh.h" />
+    <ClInclude Include="rel\include\AP\tik.h" />
     <ClInclude Include="rel\include\AP\tou.h" />
     <ClInclude Include="rel\include\AP\tou2.h" />
     <ClInclude Include="rel\include\AP\usu.h" />
@@ -176,6 +180,7 @@
     <ClInclude Include="rel\include\OWR.h" />
     <ClInclude Include="rel\include\OWR_STATE.h" />
     <ClInclude Include="rel\include\patch.h" />
+    <ClInclude Include="rel\include\StateManager.h" />
     <ClInclude Include="rel\include\timer.h" />
     <ClInclude Include="rel\include\ttyd\animdrv.h" />
     <ClInclude Include="rel\include\ttyd\common_types.h" />
@@ -237,6 +242,7 @@
     <ClInclude Include="rel\include\util.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="rel\source\AP\aaa.cpp" />
     <ClCompile Include="rel\source\AP\aji.cpp" />
     <ClCompile Include="rel\source\AP\bom.cpp" />
     <ClCompile Include="rel\source\AP\dou.cpp" />
@@ -252,6 +258,7 @@
     <ClCompile Include="rel\source\AP\gra.cpp" />
     <ClCompile Include="rel\source\AP\hei.cpp" />
     <ClCompile Include="rel\source\AP\hom.cpp" />
+    <ClCompile Include="rel\source\AP\las.cpp" />
     <ClCompile Include="rel\source\AP\moo.cpp" />
     <ClCompile Include="rel\source\AP\mri.cpp" />
     <ClCompile Include="rel\source\AP\muj.cpp" />
@@ -259,6 +266,8 @@
     <ClCompile Include="rel\source\AP\jin.cpp" />
     <ClCompile Include="rel\source\AP\pik.cpp" />
     <ClCompile Include="rel\source\AP\rsh.cpp" />
+    <ClCompile Include="rel\source\AP\kpa.cpp" />
+    <ClCompile Include="rel\source\AP\tik.cpp" />
     <ClCompile Include="rel\source\AP\tou.cpp" />
     <ClCompile Include="rel\source\AP\tou2.cpp" />
     <ClCompile Include="rel\source\AP\usu.cpp" />
@@ -274,6 +283,7 @@
     <ClCompile Include="rel\source\OWR.cpp" />
     <ClCompile Include="rel\source\patch.cpp" />
     <ClCompile Include="rel\source\rel.cpp" />
+    <ClCompile Include="rel\source\StateManager.cpp" />
     <ClCompile Include="rel\source\ug.cpp" />
     <ClCompile Include="rel\source\util.cpp" />
   </ItemGroup>
