Continued ASM code

--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="rel\include\AP\jin.h" />
     <ClInclude Include="rel\include\AP\kpa.h" />
     <ClInclude Include="rel\include\AP\las.h" />
+    <ClInclude Include="rel\include\AP\main.h" />
     <ClInclude Include="rel\include\AP\moo.h" />
     <ClInclude Include="rel\include\AP\mri.h" />
     <ClInclude Include="rel\include\AP\muj.h" />
@@ -259,6 +260,7 @@
     <ClCompile Include="rel\source\AP\hei.cpp" />
     <ClCompile Include="rel\source\AP\hom.cpp" />
     <ClCompile Include="rel\source\AP\las.cpp" />
+    <ClCompile Include="rel\source\AP\main.cpp" />
     <ClCompile Include="rel\source\AP\moo.cpp" />
     <ClCompile Include="rel\source\AP\mri.cpp" />
     <ClCompile Include="rel\source\AP\muj.cpp" />
@@ -292,6 +294,7 @@
     <None Include="rel\include\ttyd.eu.lst" />
     <None Include="rel\include\ttyd.jp.lst" />
     <None Include="rel\include\ttyd.us.lst" />
+    <None Include="rel\source\asm\asm_objects.s" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="rel\GSW values\Ch5.txt" />
