--- a/TTYDAP.vcxproj.filters
+++ b/TTYDAP.vcxproj.filters
@@ -339,6 +339,9 @@
     <ClInclude Include="rel\include\StateManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="rel\include\AP\main.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rel\source\common.cpp">
@@ -473,12 +476,16 @@
     <ClCompile Include="rel\source\StateManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="rel\source\AP\main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="rel\include\ttyd.us.lst" />
     <None Include="rel\include\ttyd.jp.lst" />
     <None Include="rel\include\ttyd.eu.lst" />
     <None Include="cpp.hint" />
+    <None Include="rel\source\asm\asm_objects.s" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="rel\GSW values\Ch5.txt" />
