--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -294,7 +294,7 @@
     <None Include="rel\include\ttyd.eu.lst" />
     <None Include="rel\include\ttyd.jp.lst" />
     <None Include="rel\include\ttyd.us.lst" />
-    <None Include="rel\source\asm\asm_objects.s" />
+    <None Include="rel\source\asm\asm_main.s" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="rel\GSW values\Ch5.txt" />
