--- a/TTYDAP.vcxproj
+++ b/TTYDAP.vcxproj
@@ -209,6 +209,7 @@
     <ClInclude Include="rel\include\ttyd\evt_msg.h" />
     <ClInclude Include="rel\include\ttyd\evt_nannpc.h" />
     <ClInclude Include="rel\include\ttyd\evt_npc.h" />
+    <ClInclude Include="rel\include\ttyd\evt_paper.h" />
     <ClInclude Include="rel\include\ttyd\evt_party.h" />
     <ClInclude Include="rel\include\ttyd\evt_pouch.h" />
     <ClInclude Include="rel\include\ttyd\evt_seq.h" />
