--- a/TTYDAP.vcxproj.filters
+++ b/TTYDAP.vcxproj.filters
@@ -342,6 +342,9 @@
     <ClInclude Include="rel\include\AP\main.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="rel\include\ttyd\evt_paper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rel\source\common.cpp">
@@ -485,7 +488,7 @@
     <None Include="rel\include\ttyd.jp.lst" />
     <None Include="rel\include\ttyd.eu.lst" />
     <None Include="cpp.hint" />
-    <None Include="rel\source\asm\asm_objects.s" />
+    <None Include="rel\source\asm\asm_main.s" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="rel\GSW values\Ch5.txt" />
